-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.7.0 Beta2, 6.8.0 FF
-
None
-
-
1062373b8 (dev), 60c33a250 (6.7)
********* Start testing of tst_QQuickWebView ********* Config: Using QtTest library 6.8.0, Qt 6.8.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Android (10552028, +pgo, +bolt, +lto, -mlgo, based on r487747d) Clang 17.0.2 (https://android.googlesource.com/toolchain/llvm-project d9f89f4d16663d5012e5c09495f3b30ece3d2362)), android 14.0 PASS : tst_QQuickWebView::initTestCase() PASS : tst_QQuickWebView::navigationStatusAtStartup() "Error: the test's output.junitxml is empty." ****** Begin logcat output ****** --------- beginning of main 01-18 19:48:25.614 6882 6882 I t_qquickwebview: Late-enabling -Xcheck:jni 01-18 19:48:25.640 6882 6882 I t_qquickwebview: Using CollectorTypeCC GC. 01-18 19:48:25.641 6882 6882 W t_qquickwebview: Unexpected CPU variant for x86: x86_64. 01-18 19:48:25.641 6882 6882 W t_qquickwebview: Known variants: atom, sandybridge, silvermont, goldmont, goldmont-plus, tremont, kabylake, default 01-18 19:48:25.751 6882 6882 D CompatibilityChangeReporter: Compat change id reported: 171979766; UID 10192; state: ENABLED 01-18 19:48:25.752 6882 6882 D CompatibilityChangeReporter: Compat change id reported: 242716250; UID 10192; state: ENABLED 01-18 19:48:25.769 6882 6882 W ziparchive: Unable to open '/data/app/~~toupIVyDC8eegd9egVHYYw==/org.qtproject.example.tst_qquickwebview-PwZj9Rxe3oe1B_F5ZAanEQ==/base.dm': No such file or directory 01-18 19:48:25.769 6882 6882 W ziparchive: Unable to open '/data/app/~~toupIVyDC8eegd9egVHYYw==/org.qtproject.example.tst_qquickwebview-PwZj9Rxe3oe1B_F5ZAanEQ==/base.dm': No such file or directory 01-18 19:48:25.820 6882 6882 D nativeloader: Configuring clns-6 for other apk /data/app/~~toupIVyDC8eegd9egVHYYw==/org.qtproject.example.tst_qquickwebview-PwZj9Rxe3oe1B_F5ZAanEQ==/base.apk. target_sdk_version=34, uses_libraries=, library_path=/data/app/~~toupIVyDC8eegd9egVHYYw==/org.qtproject.example.tst_qquickwebview-PwZj9Rxe3oe1B_F5ZAanEQ==/lib/x86_64:/data/app/~~toupIVyDC8eegd9egVHYYw==/org.qtproject.example.tst_qquickwebview-PwZj9Rxe3oe1B_F5ZAanEQ==/base.apk!/lib/x86_64, permitted_path=/data:/mnt/expand:/data/user/0/org.qtproject.example.tst_qquickwebview 01-18 19:48:25.834 6882 6882 V GraphicsEnvironment: Currently set values for: 01-18 19:48:25.835 6882 6882 V GraphicsEnvironment: angle_gl_driver_selection_pkgs=[] 01-18 19:48:25.835 6882 6882 V GraphicsEnvironment: angle_gl_driver_selection_values=[] 01-18 19:48:25.835 6882 6882 V GraphicsEnvironment: ANGLE GameManagerService for org.qtproject.example.tst_qquickwebview: false 01-18 19:48:25.835 6882 6882 V GraphicsEnvironment: org.qtproject.example.tst_qquickwebview is not listed in per-application setting 01-18 19:48:25.835 6882 6882 V GraphicsEnvironment: Neither updatable production driver nor prerelease driver is supported. 01-18 19:48:25.859 6882 6910 D libEGL : loaded /vendor/lib64/egl/libEGL_emulation.so 01-18 19:48:25.867 6882 6910 D libEGL : loaded /vendor/lib64/egl/libGLESv1_CM_emulation.so 01-18 19:48:25.869 6882 6910 D libEGL : loaded /vendor/lib64/egl/libGLESv2_emulation.so 01-18 19:48:25.915 6882 6882 D CompatibilityChangeReporter: Compat change id reported: 247079863; UID 10192; state: ENABLED 01-18 19:48:25.917 6882 6882 W ziparchive: Unable to open '/data/app/~~toupIVyDC8eegd9egVHYYw==/org.qtproject.example.tst_qquickwebview-PwZj9Rxe3oe1B_F5ZAanEQ==/base.dm': No such file or directory 01-18 19:48:25.917 6882 6882 W ziparchive: Unable to open '/data/app/~~toupIVyDC8eegd9egVHYYw==/org.qtproject.example.tst_qquickwebview-PwZj9Rxe3oe1B_F5ZAanEQ==/base.dm': No such file or directory 01-18 19:48:26.647 6882 6912 I QtCore : Start 01-18 19:48:26.695 6882 6912 I Qt : qt started 01-18 19:48:26.708 6882 6882 D CompatibilityChangeReporter: Compat change id reported: 210923482; UID 10192; state: ENABLED 01-18 19:48:26.722 6882 6882 D CompatibilityChangeReporter: Compat change id reported: 237531167; UID 10192; state: DISABLED 01-18 19:48:26.724 6882 6882 W OpenGLRenderer: Unknown dataspace 0 01-18 19:48:26.792 6882 6909 W OpenGLRenderer: Failed to initialize 101010-2 format, error = EGL_SUCCESS 01-18 19:48:26.823 6882 6909 I Gralloc4: mapper 4.x is not supported 01-18 19:48:27.220 6882 6912 I QTestLib: ********* Start testing of tst_QQuickWebView ********* 01-18 19:48:27.220 6882 6912 I QTestLib: Config: Using QtTest library 6.8.0, Qt 6.8.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Android (10552028, +pgo, +bolt, +lto, -mlgo, based on r487747d) Clang 17.0.2 (https://android.googlesource.com/toolchain/llvm-project d9f89f4d16663d5012e5c09495f3b30ece3d2362)), android 14.0 01-18 19:48:27.243 6882 6912 I QTestLib: PASS : tst_QQuickWebView::initTestCase() 01-18 19:48:27.263 6882 6882 I WebViewFactory: Loading com.google.android.webview version 113.0.5672.136 (code 567263637) 01-18 19:48:27.267 6882 6882 W ziparchive: Unable to open '/data/app/~~qa5Xci00gECqjDRUvtQmAA==/com.google.android.trichromelibrary_567263637-E8aKCsVud3U5FbVRbl3KRw==/TrichromeLibrary.dm': No such file or directory 01-18 19:48:27.267 6882 6882 W ziparchive: Unable to open '/data/app/~~qa5Xci00gECqjDRUvtQmAA==/com.google.android.trichromelibrary_567263637-E8aKCsVud3U5FbVRbl3KRw==/TrichromeLibrary.dm': No such file or directory 01-18 19:48:27.268 6882 6882 W t_qquickwebview: Entry not found 01-18 19:48:27.270 6882 6882 D nativeloader: Configuring clns-7 for other apk /data/app/~~qa5Xci00gECqjDRUvtQmAA==/com.google.android.trichromelibrary_567263637-E8aKCsVud3U5FbVRbl3KRw==/TrichromeLibrary.apk. target_sdk_version=34, uses_libraries=ALL, library_path=/data/app/~~9pjJ-MM2Y6y8b48U3ojPxQ==/com.google.android.webview-JhQLE-4B301gGAqNaXNsGQ==/lib/x86_64:/data/app/~~9pjJ-MM2Y6y8b48U3ojPxQ==/com.google.android.webview-JhQLE-4B301gGAqNaXNsGQ==/WebViewGoogle.apk!/lib/x86_64:/data/app/~~qa5Xci00gECqjDRUvtQmAA==/com.google.android.trichromelibrary_567263637-E8aKCsVud3U5FbVRbl3KRw==/TrichromeLibrary.apk!/lib/x86_64, permitted_path=/data:/mnt/expand 01-18 19:48:27.275 6882 6882 D nativeloader: Configuring clns-8 for other apk /data/app/~~9pjJ-MM2Y6y8b48U3ojPxQ==/com.google.android.webview-JhQLE-4B301gGAqNaXNsGQ==/WebViewGoogle.apk. target_sdk_version=34, uses_libraries=, library_path=/data/app/~~9pjJ-MM2Y6y8b48U3ojPxQ==/com.google.android.webview-JhQLE-4B301gGAqNaXNsGQ==/lib/x86_64:/data/app/~~9pjJ-MM2Y6y8b48U3ojPxQ==/com.google.android.webview-JhQLE-4B301gGAqNaXNsGQ==/WebViewGoogle.apk!/lib/x86_64:/data/app/~~qa5Xci00gECqjDRUvtQmAA==/com.google.android.trichromelibrary_567263637-E8aKCsVud3U5FbVRbl3KRw==/TrichromeLibrary.apk!/lib/x86_64, permitted_path=/data:/mnt/expand 01-18 19:48:27.303 6882 6882 W t_qquickwebview: Accessing hidden method Landroid/os/Trace;->isTagEnabled(J)Z (unsupported, reflection, allowed) 01-18 19:48:27.303 6882 6882 W t_qquickwebview: Accessing hidden method Landroid/os/Trace;->traceBegin(JLjava/lang/String;)V (unsupported, reflection, allowed) 01-18 19:48:27.303 6882 6882 W t_qquickwebview: Accessing hidden method Landroid/os/Trace;->traceEnd(J)V (unsupported, reflection, allowed) 01-18 19:48:27.303 6882 6882 W t_qquickwebview: Accessing hidden method Landroid/os/Trace;->asyncTraceBegin(JLjava/lang/String;I)V (unsupported, reflection, allowed) 01-18 19:48:27.304 6882 6882 W t_qquickwebview: Accessing hidden method Landroid/os/Trace;->asyncTraceEnd(JLjava/lang/String;I)V (unsupported, reflection, allowed) 01-18 19:48:27.308 6882 6882 I cr_WVCFactoryProvider: Loaded version=113.0.5672.136 minSdkVersion=29 isBundle=false multiprocess=true packageId=2 01-18 19:48:27.321 6882 6961 I cr_VariationsUtils: Failed reading seed file "/data/user/0/org.qtproject.example.tst_qquickwebview/app_webview/variations_seed_new" 01-18 19:48:27.321 6882 6961 I cr_VariationsUtils: Failed reading seed file "/data/user/0/org.qtproject.example.tst_qquickwebview/app_webview/variations_seed" 01-18 19:48:27.321 6882 6961 I cr_VariationsUtils: Requesting new seed from IVariationsSeedServer 01-18 19:48:27.331 6882 6882 I cr_LibraryLoader: Successfully loaded native library 01-18 19:48:27.332 6882 6882 I cr_CachingUmaRecorder: Flushed 8 samples from 8 histograms. 01-18 19:48:27.410 6882 6882 D CompatibilityChangeReporter: Compat change id reported: 183155436; UID 10192; state: ENABLED 01-18 19:48:27.528 6882 6882 D CompatibilityChangeReporter: Compat change id reported: 214741472; UID 10192; state: ENABLED 01-18 19:48:27.531 6882 6882 D CompatibilityChangeReporter: Compat change id reported: 171228096; UID 10192; state: ENABLED 01-18 19:48:27.570 6882 6882 D AutofillManager: Fill dialog is enabled:false, hints=[password, passwordAuto, creditCardNumber, creditCardSecurityCode, creditCardExpirationDate] 01-18 19:48:27.602 6882 6882 D CompatibilityChangeReporter: Compat change id reported: 193247900; UID 10192; state: ENABLED 01-18 19:48:27.694 6882 6882 D AndroidRuntime: Shutting down VM 01-18 19:48:27.696 6882 6912 I QTestLib: PASS : tst_QQuickWebView::navigationStatusAtStartup() --------- beginning of crash 01-18 19:48:27.697 6882 6882 E AndroidRuntime: FATAL EXCEPTION: main 01-18 19:48:27.697 6882 6882 E AndroidRuntime: Process: org.qtproject.example.tst_qquickwebview, PID: 6882 01-18 19:48:27.697 6882 6882 E AndroidRuntime: java.lang.IllegalStateException: The specified child already has a parent. You must call removeView() on the child's parent first. 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at android.view.ViewGroup.addViewInner(ViewGroup.java:5275) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at android.view.ViewGroup.addView(ViewGroup.java:5104) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at android.view.ViewGroup.addView(ViewGroup.java:5044) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at org.qtproject.qt.android.QtActivityDelegate.lambda$addTopLevelWindow$11$org-qtproject-qt-android-QtActivityDelegate(QtActivityDelegate.java:393) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at org.qtproject.qt.android.QtActivityDelegate$$ExternalSyntheticLambda7.run(Unknown Source:4) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at android.os.Handler.handleCallback(Handler.java:958) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at android.os.Handler.dispatchMessage(Handler.java:99) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at android.os.Looper.loopOnce(Looper.java:205) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at android.os.Looper.loop(Looper.java:294) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at android.app.ActivityThread.main(ActivityThread.java:8177) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at java.lang.reflect.Method.invoke(Native Method) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at com.android.internal.os.RuntimeInit$MethodAndArgsCaller.run(RuntimeInit.java:552) 01-18 19:48:27.697 6882 6882 E AndroidRuntime: at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:971) 01-18 19:48:27.703 6882 6882 W t_qquickwebview: Attempt to remove non-JNI local reference 01-18 19:48:27.720 6882 6882 I Process : Sending signal. PID: 6882 SIG: 9 ****** End logcat output ****** The retrieved crash logcat is empty Execute /opt/android/sdk/platform-tools/adb uninstall org.qtproject.example.tst_qquickwebview. Success qt-testrunner.py INFO: Test process exited with code: 1 qt-testrunner.py ERROR: XML log file not found: /home/qt/work/testresults/tst_qquickwebview-1705607302327.xml qt-testrunner.py ERROR: exception:FileNotFoundError [Errno 2] No such file or directory: '/home/qt/work/testresults/tst_qquickwebview-1705607302327.xml' qt-testrunner.py ERROR: The test executable probably crashed, see above for details qt-testrunner.py ERROR: Full test run failed repeatedly, aborting! CMake Error at tst_qquickwebviewWrapperRelWithDebInfo.cmake:18 (message): /home/qt/work/install/libexec/qt-testrunner.py -- /home/qt/work/install/bin/androidtestrunner --path /home/qt/work/qt/qtwebview_standalone_tests/tests/auto/qml/qquickwebview/android-build --adb /opt/android/sdk/platform-tools/adb --skip-install-root --make "/opt/cmake-3.27.7/bin/cmake" --build /home/qt/work/qt/qtwebview_standalone_tests --target tst_qquickwebview_make_apk --apk /home/qt/work/qt/qtwebview_standalone_tests/tests/auto/qml/qquickwebview/android-build/tst_qquickwebview.apk --ndk-stack /opt/android/android-ndk-r26b/ndk-stack --timeout 855 --verbose execution failed with exit code 3. 50% tests passed, 1 tests failed out of 2 Label Time Summary: tests/auto/qml/qquickwebview/tst_qquickwebview = 26.57 sec*proc (1 test) tests/auto/webview/qwebview/tst_qwebview = 98.02 sec*proc (1 test) Total Test time (real) = 124.60 sec The following tests FAILED: 2 - tst_qquickwebview (Failed) Errors while running CTest Process finished with error: exit status 8
Details: https://testresults.qt.io/coin/integration/qt/qtwebview/tasks/1706342946
Tested changes (refs/builds/qtci/dev/1705606912):
https://codereview.qt-project.org/c/qt/qtwebview/+/532154/2 Update dependencies on 'dev' in qt/qtwebview
- blocks
-
QTBUG-111580 Update provisioned LLVM/Clang binaries to v17
-
- Closed
-
| For Gerrit Dashboard: QTBUG-121232 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 532963,3 | Android: Remove parent before adding window to screen | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 533145,2 | Android: Remove parent before adding window to screen | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |